--- a/SpringBootExample/pom.xml
+++ b/SpringBootExample/pom.xml
@@ -1,12 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.cyberark.conjur.springboot</groupId>
-	<artifactId>Spring-boot-conjur</artifactId>
+	<groupId>SpringBootExample</groupId>
+	<artifactId>SpringBootExample</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
 
-	<name>Spring Boot Plugin Project </name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -16,42 +13,37 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring-boot.version>2.5.7</spring-boot.version>
+		<spring.version>5.3.13</spring.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
+		<start-class>com.test.plugin.ConjurClient</start-class>
 		<rest.assured.version>2.3.3</rest.assured.version>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+
 		</dependency>
 
 
 		<dependency>
-			<groupId>com.cyberark</groupId>
-			<artifactId>conjur-sdk-java</artifactId>
-			<version>4.0.0</version>
+			<groupId>com.cyberark.conjur.springboot</groupId>
+			<artifactId>Spring-boot-conjur</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
-
-		<dependency>
+<dependency>
 			<groupId>com.jayway.restassured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>${rest.assured.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<scope>test</scope>
-		</dependency>
+
+
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
@@ -64,24 +56,12 @@
 		</dependency>
 
 	</dependencies>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.junit</groupId>
-				<artifactId>junit-bom</artifactId>
-				<version>5.8.2</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				
 				<dependencies>
 					<dependency>
 						<groupId>org.springframework</groupId>
@@ -92,5 +72,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
